@@ -17,6 +17,7 @@ HEADERS = \
 	synthv1_list.h \
 	synthv1_fx.h \
 	synthv1_nsm.h \
+	synthv1_param.h \
 	synthv1widget.h \
 	synthv1widget_env.h \
 	synthv1widget_filt.h \
@@ -31,6 +32,7 @@ SOURCES = \
 	synthv1.cpp \
 	synthv1_jack.cpp \
 	synthv1_nsm.cpp \
+	synthv1_param.cpp \
 	synthv1widget.cpp \
 	synthv1widget_env.cpp \
 	synthv1widget_filt.cpp \
