@@ -2,7 +2,7 @@
 #
 NAME = synthv1
 
-TARGET = $${NAME}_lv2
+TARGET = $${NAME}
 TEMPLATE = lib
 CONFIG += shared plugin
 
@@ -17,33 +17,12 @@ HEADERS = \
 	synthv1_ramp.h \
 	synthv1_list.h \
 	synthv1_fx.h \
-	synthv1widget.h \
-	synthv1widget_env.h \
-	synthv1widget_filt.h \
-	synthv1widget_wave.h \
-	synthv1widget_knob.h \
-	synthv1widget_preset.h \
-	synthv1widget_status.h \
-	synthv1widget_config.h \
-	synthv1widget_lv2.h
+	synthv1_param.h
 
 SOURCES = \
 	synthv1.cpp \
 	synthv1_lv2.cpp \
-	synthv1widget.cpp \
-	synthv1widget_env.cpp \
-	synthv1widget_filt.cpp \
-	synthv1widget_wave.cpp \
-	synthv1widget_knob.cpp \
-	synthv1widget_preset.cpp \
-	synthv1widget_status.cpp \
-	synthv1widget_config.cpp \
-	synthv1widget_lv2.cpp
-
-FORMS = \
-	synthv1widget.ui
-
-RESOURCES += synthv1.qrc
+	synthv1_param.cpp
 
 
 unix {
@@ -67,17 +46,20 @@ unix {
 		}
 	}
 
-	isEmpty(QMAKE_EXTENSION_SHLIB) {
-		QMAKE_EXTENSION_SHLIB = so
-	}
-
-	TARGET_LV2 = $${NAME}.lv2/$${NAME}.$${QMAKE_EXTENSION_SHLIB}
+	TARGET_LV2 = $${NAME}.lv2/$${TARGET}.so
 
 	!exists($${TARGET_LV2}) {
 		system(touch $${TARGET_LV2})
 	}
 
-	QMAKE_POST_LINK += $${QMAKE_COPY} -vp $(TARGET) $${TARGET_LV2}
+	TARGET_LIB = $${NAME}.lv2/lib$${TARGET}.a
+
+	!exists($${TARGET_LIB}) {
+		system(touch $${TARGET_LIB})
+	}
+
+	QMAKE_POST_LINK += $${QMAKE_COPY} -vp $(TARGET) $${TARGET_LV2};\
+		rm -vf $${TARGET_LIB}; ar -r $${TARGET_LIB} $${TARGET_LV2}
 
 	INSTALLS += target
 
@@ -86,13 +68,8 @@ unix {
 		$${NAME}.lv2/$${NAME}.ttl \
 		$${NAME}.lv2/manifest.ttl
 
-	QMAKE_CLEAN += $${TARGET_LV2}
+	QMAKE_CLEAN += $${TARGET_LV2} $${TARGET_LIB}
 }
 
+QT -= gui
 QT += xml
-
-
-# QT5 support
-!lessThan(QT_MAJOR_VERSION, 5) {
-	QT += widgets
-}
